# portfolio-devzair-api

./: .env.example  .gitignore  Dockerfile  alembic.ini  api-python-instructions.md  docker-compose.yml  pyproject.toml  recompress_uploads.py
src/: manage.py
src/app/: main.py
src/app/core/: config.py  dependencies.py  security.py
src/app/database/: session.py
src/app/database/migrations/: env.py
src/app/database/migrations/versions/: 3b6f3587b1f1_add_categories_table_and_skill_order.py  6f695d4227ad_create_projects_table.py  82f391949f6b_create_skills_table.py  a1b2c3d4e5f6_add_icon_color_to_skills.py  acc616ec7768_create_users_table.py  acffe357c126_change_stack_column_to_json.py  b2c3d4e5f6a7_add_image_url_to_projects.py  beda2b3fe93d_create_settings_table.py  c3d4e5f6a7b8_add_order_to_projects.py  f5abdc72ce9a_create_experiences_table.py
src/app/models/: category.py  experience.py  project.py  setting.py  skill.py  user.py
src/app/repositories/: category_repository.py  experience_repository.py  project_repository.py  setting_repository.py  skill_repository.py  user_repository.py
src/app/routers/: auth.py  categories.py  contact.py  experiences.py  projects.py  settings.py  skills.py  upload.py
src/app/schemas/: category.py  experience.py  project.py  setting.py  skill.py
src/app/services/: category_service.py  experience_service.py  project_service.py  setting_service.py  skill_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_projects.py
